fixed text overflow issues

--- a/website/src/mainpage/edu.module.css
+++ b/website/src/mainpage/edu.module.css
@@ -1,3 +1,8 @@
+.education{
+    word-break: break-word;
+    overflow-wrap: break-word;
+}
+
 .suptitle{
     color: var(--secondary);
     display: flex;
